# task-tracer

./: .ruff.toml  README.md  pyproject.toml  pyrightconfig.json  pytest.ini  task-cli.py
.github/workflows/: branch.yaml
src/: task-cli.py
src/cli/: app.py  task.py
src/shared/infrastructure/service/: database.py
src/shared/util/: func.py
src/task/: app.py
src/task/commands/concrete/: add_task_command.py  delete_task_command.py  update_task_command.py
src/task/domain/: entity.py
src/task/domain/repository/: task_repository.py
src/task/domain/value_objects/: dto.py  status.py
src/task/infrastructure/: task_model.py  task_repository.py  task_sql_queries.py
src/task/invoker/: task_invoker.py
src/task/queries/: task_query.py  task_query_by_id.py
src/task/receiver/: task_receiver.py
tests/: conftest.py
tests/cli/: test_task.py
tests/integration/task/commands/: test_add_task_command.py  test_delete_task_command.py  test_update_task_command.py
tests/integration/task/infrastructure/: test_task_repository.py
tests/integration/task/invoker/: test_invoker.py
tests/integration/task/queries/: test_task_query.py  test_task_query_by_id.py
tests/integration/task/receiver/: test_task_receiver.py
tests/shared/unit/domain/: test_status.py
tests/task/integration/task/commands/: test_add_task_command.py  test_delete_task_command.py  test_update_task_command.py
tests/task/integration/task/infrastructure/: test_task_repository.py
tests/unit/shared/domain/: test_entity.py
tests/unit/task/domain/: test_entity.py  test_status.py
(+7 files in other folders)
