[project]
name = "vitari-task-tracer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.9.2",
]

[tool.uv]
dev-dependencies = [
    "pre-commit>=4.0.1",
    "pytest-cov>=5.0.0",
    "pytest>=8.3.3",
    "ruff>=0.6.9",
]
